feat(homeSection): Cria e Estiliza a seção Home

--- a/front-end-com-bia/Projeto-Site-Pessoal/index.html
+++ b/front-end-com-bia/Projeto-Site-Pessoal/index.html
@@ -21,7 +21,15 @@
         </ul>
     </nav>
     <section id="homeSection">
-        <h1>Iokim Diego</h1>
+        <div id="photoHome"></div>
+        <div id="textsHome">
+            <h1>Iokim Diego</h1>
+            <h2>Desenvolvedor Full Stack</h2>
+            <div class="downloadButton">
+                <img src="assets/icons/envia.svg" width="18px" alt="">
+                <a href="sources/Desenvolvedor Front-End - Iokim Diego Martins e Silva.pdf" download="Desenvolvedor Front-End - Iokim Diego Martins e Silva.pdf">Baixar currículo</a>
+            </div>
+        </div>
     </section>
     <section id="aboutSection">
         <h1>Sobre mim</h1>
