feat(SobreMim): Cria e estiliza a seção Sobre mim.

--- a/front-end-com-bia/Projeto-Site-Pessoal/index.html
+++ b/front-end-com-bia/Projeto-Site-Pessoal/index.html
@@ -23,16 +23,36 @@
     <section id="homeSection">
         <div id="photoHome"></div>
         <div id="textsHome">
-            <h1>Iokim Diego</h1>
-            <h2>Desenvolvedor Full Stack</h2>
-            <div class="downloadButton">
-                <img src="assets/icons/envia.svg" width="18px" alt="">
-                <a href="sources/Desenvolvedor Front-End - Iokim Diego Martins e Silva.pdf" download="Desenvolvedor Front-End - Iokim Diego Martins e Silva.pdf">Baixar currículo</a>
+            <div>
+                <h1 class="titles">Iokim Diego</h1>
+                <h2>Desenvolvedor Full Stack</h2>
+                <div class="defaultButton downloadButton">
+                    <img src="assets/icons/envia.svg" width="18px" alt="">
+                    <a href="sources/Desenvolvedor Front-End - Iokim Diego Martins e Silva.pdf" download="Desenvolvedor Front-End - Iokim Diego Martins e Silva.pdf">Baixar currículo</a>
+                </div>
             </div>
         </div>
     </section>
     <section id="aboutSection">
-        <h1>Sobre mim</h1>
+        <div id="textsAboutMeFlexContainer">
+            <div id="textsAboutMeFlexItem">
+                <h1 class="titles">Sobre mim</h1>
+                <p>Profissional em transição de carreira
+                    para o Desenvolvimento Front-End,
+                    com sólida experiência administrativa
+                    nos setores público e privado. Ao
+                    longo da minha trajetória, desenvolvi
+                    habilidades como responsabilidade,
+                    proatividade, empatia e pensamento
+                    analítico.
+                    </p>
+                 <div class="defaultButton linkedinButton">
+                    <img src="assets/icons/linkedin.svg" width="18px" alt="">
+                    <a href="https://www.linkedin.com/in/iokimdiego/" target="_blank">Confira meu LinkedIn</a>
+                </div>
+            </div>
+        </div>
+        <div id="photoAboutMe"></div>
     </section>
     <section id="skillsSection">
         <h1>Skills
