feat(Skills): Cria e estiliza a seção Skills

--- a/front-end-com-bia/Projeto-Site-Pessoal/index.html
+++ b/front-end-com-bia/Projeto-Site-Pessoal/index.html
@@ -26,7 +26,7 @@
             <div>
                 <h1 class="titles">Iokim Diego</h1>
                 <h2>Desenvolvedor Full Stack</h2>
-                <div class="defaultButton downloadButton">
+                <div class="defaultButton downloadButtonLight">
                     <img src="assets/icons/envia.svg" width="18px" alt="">
                     <a href="sources/Desenvolvedor Front-End - Iokim Diego Martins e Silva.pdf" download="Desenvolvedor Front-End - Iokim Diego Martins e Silva.pdf">Baixar currículo</a>
                 </div>
@@ -55,11 +55,43 @@
         <div id="photoAboutMe"></div>
     </section>
     <section id="skillsSection">
-        <h1>Skills
-        </h1>
+        <div class="overlay">
+            <h1 class="titles">Skills</h1>
+            <ul>
+                <li>PHP</li>
+                <li>MySQL</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+                <li>ES6</li>
+                <li>React</li>
+                <li>Git</li>
+                <li>GitHub</li>
+                <li>Figma</li>
+                <li>Desenvolvimento Ágil</li>
+            </ul>
+            <div class="defaultButton downloadButtonDark">
+                <img src="assets/icons/envia.svg" width="18px" alt="">
+                <a href="sources/Desenvolvedor Front-End - Iokim Diego Martins e Silva.pdf" download="Desenvolvedor Front-End - Iokim Diego Martins e Silva.pdf">Baixar currículo completo</a>
+            </div>
+        </div>
     </section>
     <section id="contactSection">
         <h1>Contato</h1>
+        <p>Gostaria de bater um papo comigo? Vou deixar todas as minhas formas de contato e redes sociais listadas abaixo</p>
+        <div>
+            <div>
+                <img src="" alt="">
+                <p>iokimdiego@hotmail.com</p>
+            </div>
+            <div>
+                <img src="" alt="">
+                <p>+55 (92) 9 8194-0300</p>
+            </div>
+        </div>
+        <a href=""><img src="" alt=""></a>
+        <a href=""><img src="" alt=""></a>
+        <a href=""><img src="" alt=""></a>
     </section>
 </body>
 </html>
