--- a/front-end-com-bia/Projeto-Site-Pessoal/index.html
+++ b/front-end-com-bia/Projeto-Site-Pessoal/index.html
@@ -3,12 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Site de Currículo pessoal de Iokim Diego, desenvolvedor Front-End">
+    <meta name="author" content="Iokim Diego">
+    <meta name="keywords" content="programação, tecnologia, currículo, portfolio, site pessoal, HTML, CSS, JavaScript">
+    <meta name="robots" content="index, nofollow "> <!-- Meta TAG con informações para motores de busca  -->
+    <!-- 1º Valor: Se você deseja que o motores de busca indexem o seu site nas pesquisas, digite "index" ou "noindex" -->
+    <!-- 2º Valor: Se você deseja que os links que estão dentro da sua página também sejam indexados. Nesse caso, o valor está negativo "nofollow" -->
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Iokim Diego - Currículo</title>
 </head>
 <body>
     <nav>
@@ -22,8 +28,8 @@
     </nav>
     <section id="homeSection">
         <div id="photoHome"></div>
-        <div id="textsHome">
-            <div>
+        <div id="homeContents">
+            <div id="homeTexts">
                 <h1 class="titles">Iokim Diego</h1>
                 <h2>Desenvolvedor Full Stack</h2>
                 <div class="defaultButton downloadButtonLight">
