feat(Aula 1): Apresenta 5 formas de selecionar elementos do DOM com JS

--- a/front-end-com-bia/Aulas-Páginas-Dinâmicas/index.html
+++ b/front-end-com-bia/Aulas-Páginas-Dinâmicas/index.html
@@ -9,18 +9,21 @@
 <body>
     <h1>Selecionando elementos do DOM com Javascript</h1>
     <div>
-        <button class="styleButton">Botão 1</button>
-        <button class="styleButton">Botão 2</button>
-        <button class="styleButton">Botão 3</button>
+        <button class="styleButton boldText">Botão 1</button>
+        <button class="styleButton boldText">Botão 2</button>
+        <button class="styleButton boldText">Botão 3</button>
     </div>
 
     <h2>Título 1</h2>
-    <p class="styledParagraph">Parágrafo 1: Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates exercitationem quis delectus voluptatum nisi velit facere repellat modi blanditiis ab assumenda, eius cupiditate possimus, veniam iusto adipisci illo, harum veritatis?</p>
+    <p class="styledParagraph boldText">Parágrafo 1: Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates exercitationem quis delectus voluptatum nisi velit facere repellat modi blanditiis ab assumenda, eius cupiditate possimus, veniam iusto adipisci illo, harum veritatis?</p>
     <h2 id="customTitle">Título 2</h2>
     <p class="styledParagraph">Parágrafo 2: Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates exercitationem quis delectus voluptatum nisi velit facere repellat modi blanditiis ab assumenda, eius cupiditate possimus, veniam iusto adipisci illo, harum veritatis?</p>
     <h2>Título 3</h2>
     <p class="styledParagraph">Parágrafo 3: Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates exercitationem quis delectus voluptatum nisi velit facere repellat modi blanditiis ab assumenda, eius cupiditate possimus, veniam iusto adipisci illo, harum veritatis?</p>
     <h2>Título 1</h2>
     <p class="styledParagraph">Parágrafo 4: Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates exercitationem quis delectus voluptatum nisi velit facere repellat modi blanditiis ab assumenda, eius cupiditate possimus, veniam iusto adipisci illo, harum veritatis?</p>
+
+    <script src="selectingElements.js"></script>
+    <script src="manipulatingContent.js"></script>
 </body>
 </html>
