feat(Aula 2): Manipulando os elemntos do DOM com JS

--- a/front-end-com-bia/Aulas-Páginas-Dinâmicas/index.html
+++ b/front-end-com-bia/Aulas-Páginas-Dinâmicas/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>Aula 02</title>
 </head>
 <body>
-    <h1>Selecionando elementos do DOM com Javascript</h1>
-    <div>
+    <h1>Manipulando elementos do DOM com Javascript</h1>
+    <div class="container">
         <button class="styleButton boldText">Botão 1</button>
         <button class="styleButton boldText">Botão 2</button>
         <button class="styleButton boldText">Botão 3</button>
@@ -20,10 +20,10 @@
     <p class="styledParagraph">Parágrafo 2: Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates exercitationem quis delectus voluptatum nisi velit facere repellat modi blanditiis ab assumenda, eius cupiditate possimus, veniam iusto adipisci illo, harum veritatis?</p>
     <h2>Título 3</h2>
     <p class="styledParagraph">Parágrafo 3: Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates exercitationem quis delectus voluptatum nisi velit facere repellat modi blanditiis ab assumenda, eius cupiditate possimus, veniam iusto adipisci illo, harum veritatis?</p>
-    <h2>Título 1</h2>
+    <h2 id="title4">Título 4</h2>
     <p class="styledParagraph">Parágrafo 4: Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates exercitationem quis delectus voluptatum nisi velit facere repellat modi blanditiis ab assumenda, eius cupiditate possimus, veniam iusto adipisci illo, harum veritatis?</p>
 
-    <script src="selectingElements.js"></script>
+    <!-- <script src="selectingElements.js"></script> -->
     <script src="manipulatingContent.js"></script>
 </body>
 </html>
