feat(Aula 03): Utilizando JS para manipular eventos de mouse e eventos de teclado

--- a/front-end-com-bia/Aulas-Páginas-Dinâmicas/Aula-03-eventos/index.html
+++ b/front-end-com-bia/Aulas-Páginas-Dinâmicas/Aula-03-eventos/index.html
@@ -8,9 +8,14 @@
 </head>
 <body>
     <h1>Eventos</h1>
-    <button>
+    <!-- <button 
+        onclick="onMouseClick()"
+        onmouseenter="onMouseEnter()"
+        onmouseleave="onMouseLeave()"
+    >
         Botão
-    </button>
+    </button> -->
+    <button>Botão</button>
     <script src="events.js"></script>
 </body>
 </html>
