--- a/front-end-com-bia/Aulas-Páginas-Dinâmicas/Aula-04-formularios/index.html
+++ b/front-end-com-bia/Aulas-Páginas-Dinâmicas/Aula-04-formularios/index.html
@@ -8,6 +8,64 @@
 </head>
 <body>
     <h1>Formulários</h1>
+    <h2>Pesquisa de Satisfação dos Geladinhos da Bia:</h2>
+    <form action="">
+        <div>
+            <label for="name">Seu nome:</label>
+            <input id="name" type="text" required>
+        </div>
+        <div>
+            <label for="email">E-mail:</label>
+            <input id="email" type="email" required>
+        </div>
+        <div>
+            <label for="email">Sexo:</label>
+            <select name="sexo" id="sexo">
+                <option value="masculino">Masculino</option>
+                <option value="feminino">Feminino</option>
+                <option value="outro">Outro</option>
+            </select>
+        </div>
+        <fieldset>
+            <legend>O que você achou do nosso produto?</legend>
+            <div>
+                <input type="radio" id="good" name="opinion" value="good" required>
+                <label for="good">Bom</label>
+            </div>
+            <div>
+                <input type="radio" id="bad" name="opinion" value="bad" required>
+                <label for="bad">Ruim</label>
+            </div>
+            <div>
+                <input type="radio" id="indifferent" name="opinion" value="good" required>
+                <label for="indifferent">Indiferente</label>
+            </div>
+        </fieldset>
+        <fieldset>
+            <legend>Qual/Quais sabores você compraria de novo?</legend>
+            <div>
+                <input type="checkbox" id="chocolate" name="geladinhos">
+                <label for="chocolate">Chocolate</label>
+            </div>
+            <div>
+                <input type="checkbox" id="morango" name="geladinhos">
+                <label for="morango">Morango</label>
+            </div>
+            <div>
+                <input type="checkbox" id="abacaxi" name="geladinhos">
+                <label for="abacaxi">Abacaxi</label>
+            </div>
+            <div>
+                <input type="checkbox" id="melancia" name="geladinhos">
+                <label for="melancia">Melancia</label>
+            </div>
+        </fieldset>
+        <div>
+            <label for="message">Tem algo a mais a nos dizer?</label>
+            <textarea id="message"></textarea>
+        </div>
+        <button>Submeter formulário</button>
+    </form>
     <script src="form.js"></script>
 </body>
 </html>
