feat(Aula 04): Usa o JS para validar se algum checkbox foi marcado e manipula o DOM de acordo com o resultado

--- a/front-end-com-bia/Aulas-Páginas-Dinâmicas/Aula-04-formularios/index.html
+++ b/front-end-com-bia/Aulas-Páginas-Dinâmicas/Aula-04-formularios/index.html
@@ -41,7 +41,7 @@
                 <label for="indifferent">Indiferente</label>
             </div>
         </fieldset>
-        <fieldset>
+        <fieldset id="geladinhos">
             <legend>Qual/Quais sabores você compraria de novo?</legend>
             <div>
                 <input type="checkbox" id="chocolate" name="geladinhos">
@@ -60,7 +60,7 @@
                 <label for="melancia">Melancia</label>
             </div>
         </fieldset>
-        <div>
+        <div class="caixa-de-texto">
             <label for="message">Tem algo a mais a nos dizer?</label>
             <textarea id="message"></textarea>
         </div>
