--- a/front-end-com-bia/Aulas-Páginas-Dinâmicas/Aula-05-todo-list/index.html
+++ b/front-end-com-bia/Aulas-Páginas-Dinâmicas/Aula-05-todo-list/index.html
@@ -8,6 +8,13 @@
 </head>
 <body>
     <h1>To Do List</h1>
+
+    <label for="task">Tarefa</label>
+    <input type="text" id="task">
+    <button>Adicionar tarefa</button>
+
+    <ul class="tasksContainer"></ul>
+
     <script src="toDoList.js"></script>
 </body>
 </html>
