--- a/front-end-com-bia/Aulas-Páginas-Dinâmicas/Aula-18-Promises/index.html
+++ b/front-end-com-bia/Aulas-Páginas-Dinâmicas/Aula-18-Promises/index.html
@@ -21,6 +21,6 @@
 </head>
 <body>
     <h1>Promises</h1>
-    <script src="conditionals.js"></script>
+    <script src="promises.js"></script>
 </body>
 </html>
