feat: cria esilizações iniciais das teclas da calculadora

--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -8,7 +8,13 @@
 </head>
 <body>
     <div class="calculadora">
-        <div class="display" id="display">0</div>
+        <div class="historico">
+            <h4>Histórico</h4>
+            <ul id="historico-lista"></ul>
+        </div>
+        <div class="display" id="display">
+            <h1>0</h1>
+        </div>
         <div class="botoes">
             <button class="btn limpar">AC</button>
             <button class="btn negativo">+/-</button>
