feat(Calculadora): Cria as funções utilitárias e de operação

--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -9,11 +9,11 @@
 <body>
     <section class="box-calculadora">
         <div class="display">
-            <div class="display-historico">
+            <div class="display-historico" id="display-historico">
                 <h4>Histórico</h4>
                 <ul id="historico-lista"></ul>
             </div>
-            <div class="display-calculo">
+            <div class="display-calculo" id="display-calculo">
                 <h1>0</h1>
             </div>
         </div>
