feat(Calculadora): Implementa animação e destaque para os botões

--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -10,6 +10,7 @@
     <section class="box-calculadora">
         <div class="display">
             <div class="display-historico" id="display-historico">
+                <span><a>Limpar</a></span>
                 <h4></h4>
                 <ul id="historico-lista"></ul>
             </div>
