fix(Calculadora): Corrigi bug de cálculos com números decimais

--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -37,7 +37,7 @@
                 <button class="btn">3</button>
                 <button class="btn operador">+</button>
                 <button class="btn zero" id="zero">0</button>
-                <button class="btn ponto">.</button>
+                <button class="btn ponto">,</button>
                 <button class="btn igual">=</button>
             </div>
         </div>
